--- a/src/componentes/navbar/styles.css
+++ b/src/componentes/navbar/styles.css
@@ -3,9 +3,9 @@
     height: 5vh;
     justify-content: center;
     align-items: center;
-    background: #2D3944;
+    background: #51687d;
     color: blanchedalmond;
-
+  
 }
 
 .navbar div{
