--- a/src/componentes/Aboutme/styles.css
+++ b/src/componentes/Aboutme/styles.css
@@ -1,4 +1,54 @@
-.aboutMe{
-    background:rgb(151, 167, 43);
+
+.container{
+    background:#688aaa;
     height: 100vh;
+    display: flex;
+    padding-top: 100px;
+    color: white;
+}
+
+.container2{
+    max-width: 40%;
+    display:flex;
+    flex-direction: column;
+    padding-left: 10%;
+
+}
+
+.aboutMe{
+    margin-top: 0;
+    font-size: 4vw;
+    text-align: center;
+}
+
+.contenido {
+    color: white;
+    font-size:larger;
+}
+
+
+
+.skills{
+    background: black;
+    width: 30%;
+    height: 60vh;
+    margin-left: 10%;
+    text-align: center;
+    font-size: 4vw;
+}
+
+.detail{
+    display: flex;
+    flex-direction: column;
+}
+.detailName{
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+}
+.education{
+  align-items: center;
+}
+.education p {
+    text-align: center;
 }
