--- a/src/componentes/navbar/styles.css
+++ b/src/componentes/navbar/styles.css
@@ -3,7 +3,7 @@
     height: 5vh;
     justify-content: center;
     align-items: center;
-    background: #51687d;
+    background: rgb(15 23 42);
     color: blanchedalmond;
    
  
