--- a/src/componentes/Aboutme/styles.css
+++ b/src/componentes/Aboutme/styles.css
@@ -23,17 +23,7 @@
 .contenido {
     color: white;
     font-size:larger;
-}
-
-
-
-.skills{
-    background: black;
-    width: 30%;
-    height: 60vh;
-    margin-left: 10%;
-    text-align: center;
-    font-size: 4vw;
+    margin-bottom: 0;
 }
 
 .detail{
@@ -50,4 +40,50 @@
 }
 .education p {
     text-align: center;
+}
+
+.knowMore{
+    display: flex;
+    margin-bottom: 32px;
+    justify-content: end;
+    text-align: center;
+}
+
+.knowMore:hover{
+    color: #03932D;
+    text-decoration: underline;
+    cursor: pointer;
+}
+.icon{
+    height: 16px;
+    width: 16px;
+    padding: 4px;
+}
+
+#titleEducation{
+    background: #03932D;
+}
+
+
+
+.skills{
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    height: 60vh;
+    margin-left: 10%;
+    text-align: center;
+    justify-content: center;
+    font-size: 4vw;
+}
+
+/* .icon-cards__content{
+    display: grid;
+    grid-template-columns: 50% 50%;
+	grid-template-rows: 35% 35% 30%;
+} */
+
+.icon-cards__content img{
+    max-width: 100px;
+    min-height: 25px;
 }
