--- a/src/componentes/Aboutme/styles.css
+++ b/src/componentes/Aboutme/styles.css
@@ -1,16 +1,17 @@
 
 .container{
-    height: 100vh;
+    height: auto;
     display: flex;
     padding-top: 50px;
+    padding-bottom: 200px;
     color: white;
+    justify-content: center;
 }
 
 .container2{
     max-width: 40%;
     display:flex;
     flex-direction: column;
-    padding-left: 10%;
 
 }
 
@@ -47,13 +48,14 @@
     margin-bottom: 32px;
     justify-content: end;
     text-align: center;
+    opacity: 0%;
 }
 
-.knowMore:hover{
+/* .knowMore:hover{
     color: #03932D;
     text-decoration: underline;
     cursor: pointer;
-}
+} */
 .icon{
     height: 16px;
     width: 16px;
@@ -67,23 +69,41 @@
 
 
 .skills{
-    display: flex;
-    flex-direction: column;
-    width: 30%;
+    width: auto;
     height: 60vh;
-    margin-left: 10%;
+    margin-left: 8%;
     text-align: center;
     justify-content: center;
     font-size: 4vw;
 }
 
-/* .icon-cards__content{
+
+.icon-cards__content{
+  display: flex;
+  border: black solid; 
+  align-items: center;
+  width: auto;
+  max-height: 30px;
+  border-radius: 16px;
+  padding: 4px;
+  background: rgb(6, 10, 20);
+ 
+}
+.icon-cards__content:hover{
+    box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.7);
+}
+
+.item{
+    width: 24px;
+    height: 24px;
+}
+.textLogo{
+    font-size:28px;
+    margin:0;
+    width: 100%;
+}
+.tags{
     display: grid;
     grid-template-columns: 50% 50%;
-	grid-template-rows: 35% 35% 30%;
-} */
-
-.icon-cards__content img{
-    max-width: 100px;
-    min-height: 25px;
+    gap: 16px;
 }
