--- a/src/componentes/Portfolio/styles.css
+++ b/src/componentes/Portfolio/styles.css
@@ -1,23 +1,79 @@
 .portfolio{
     height: 100vh;
     color: white;
- 
+    text-align: center;
+}
+
+.title{
+    margin-top: 0;
+    font-size: 4vw;
     text-align: center;
 }
 
 .proyects{
     display: flex;
-    justify-content: center;
-    
+    justify-content: center;   
 }
 
-.proyects div{
-    background: black;
+.cardProyect{
+    background: rgb(6, 10, 20);
     width: 25%;
-    height: 50vh;
+    height: auto;
     margin: 26px;
+    border-radius: 16px;
+   
+}
+.cardProyect:hover{
+    box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.7);
 }
 
+.imgProyect{
+    width: 94%;
+    height: 50%;
+    margin-top: 10px;
+    border-radius: 16px;
+}
+.titleProyect{
+    text-align: left;
+    margin-left: 16px;
+    margin-bottom: 8px;
+}
+.descriptionProyect{
+    text-align: left;
+    margin-left: 24px;
+    margin-top: 0;
+}
+.logoTech_logo{
+    width: 24px;
+    height: 24px;
+    margin-left: 6px;
+    margin-right: 6px;
+}
+.buttons{
+    display: flex;
+    justify-content:space-evenly;
+    margin-top: 12px;
+    margin-bottom: 12px;
+}
+.buttonOpen{
+    background: #03932D;
+    color: white;
+    cursor: pointer;
+    border: none;
+    border-radius: 16px;
+    height: 24px;
+    width: 100px;
+}
+.buttonCode{
+    background: black;
+    color: white;
+    cursor: pointer;
+    border: none;
+    border-radius: 16px;
+    height: 24px;
+    width: 100px;
+}
 .buttonMoreProyect{
    margin-top: 100px;
+   opacity: 0%;
 }
