--- a/src/componentes/Portfolio/styles.css
+++ b/src/componentes/Portfolio/styles.css
@@ -2,6 +2,7 @@
     height: 100vh;
     color: white;
     text-align: center;
+    padding-top: 50px;
 }
 
 .title{
@@ -18,7 +19,7 @@
 .cardProyect{
     background: rgb(6, 10, 20);
     width: 25%;
-    height: auto;
+    height: max-content;
     margin: 26px;
     border-radius: 16px;
    
