--- a/src/componentes/Home/styles.css
+++ b/src/componentes/Home/styles.css
@@ -139,3 +139,55 @@
     }
   
 }
+
+
+@media (max-width: 640px) {
+
+  .home{
+    display:flex;
+    flex-direction: column;
+    height: auto;
+    color: white;
+    justify-content: center;
+    height: 100vh;
+  }
+  .description{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+   width: 100%;
+   text-align: center;
+  }
+  .hi{
+    margin-top: 50px;
+    margin-left: 43%;
+    white-space: nowrap;
+   
+}
+.tagsHome{
+  display: flex;
+  flex-direction: row;
+  margin-top: 24px;
+  align-items: center;
+  justify-content:space-around;
+  width: 100%;
+}
+.icon-cards{
+  display: flex;
+
+  align-items: center;
+  width: max-content;
+  max-height: 30px;
+  border-radius: 16px;
+  padding: 4px;
+  background: rgb(6, 10, 20);
+  margin-left: 0px;
+  margin-top: 0px;
+}
+.photo{
+  width: 30%;
+  padding-left: 35%;
+  padding-bottom: 0px;
+ 
+}
+}
