--- a/src/componentes/Contact/styles.css
+++ b/src/componentes/Contact/styles.css
@@ -38,3 +38,14 @@
     opacity: 0%;
 }
 
+@media (max-width: 640px) {
+    .info{
+        display: flex;
+        flex-direction: column;
+        justify-content:center;
+        margin-top: 0px;
+      
+    }
+
+}
+
