--- a/src/componentes/Portfolio/styles.css
+++ b/src/componentes/Portfolio/styles.css
@@ -78,3 +78,27 @@
    margin-top: 100px;
    opacity: 0%;
 }
+
+@media (max-width: 640px) {
+    .portfolio{
+        height: auto;
+     
+    }
+    .title{ 
+        font-size: 6vw; 
+    }
+    .proyects{
+        display: flex;
+        flex-direction: column; 
+    }
+    .cardProyect{
+        background: rgb(6, 10, 20);
+        width: 85%;
+        height: max-content;
+        margin: 26px;
+        border-radius: 16px;
+       
+    }
+
+
+}
